# shareOffer

./: .gitignore  .gitmodules  Cargo.toml  FlashOffer源码学习-立即可用的修复方案.md  Git提交记录总结.md  Redis分区路由功能开发文档.md  Redis功能开发待办清单.md  Redis功能缺口与待办任务.md  diff_redis_branch.txt
share-offer-src/: Cargo.toml  main_master.rs  main_redis.rs
share-offer-src/config/: oms.json  oms.toml  redis.json  tcp_share_config.json  tcp_share_config_example.json  tdgw.json  tdgw.toml  tgw.json  tgw.toml
share-offer-src/ndpp-toe-socket-v20251027/: .clang-format  .gitignore  ChangeLog  RingBuffer教学文档.md  项目总结文档.md
share-offer-src/ndpp-toe-socket-v20251027/host/: Makefile
share-offer-src/ndpp-toe-socket-v20251027/host/tcp_conn_lib/: tcp_conn.h  tcp_conn_type.h  tpl_of_tcp_conn_config.json
share-offer-src/ndpp-toe-socket-v20251027/host/tcp_share_app/: Makefile  README.md  tcp_share_config.json  tcp_share_forward_app_main.c
share-offer-src/ndpp-toe-socket-v20251027/host/tcp_share_app_rust/: Cargo.toml  Makefile  build.rs  env-rustc.sh
share-offer-src/src/: auto_reject.rs  constants.rs  lib.rs  log.rs  main.rs  msg_processor.rs  oms_report_router.rs  redis_client.rs  route.rs  session.rs  startup_result.rs
share-offer-src/src/config/: mod.rs  oms.rs  redis.rs  tcp_share.rs  tdgw.rs  tgw.rs
share-offer-src/src/moc/: moc_client.rs  moc_client_tgw.rs  moc_server.rs  moc_server_tgw.rs
share-offer-src/src/share-offer-sys/: Cargo.toml  build.rs  wrapper.h
share-offer-src/src/share-offer-sys/.cargo/: config.toml
share-offer-src/test_file/: run_moc_client_18001_1.sh
share-offer-src/test_file/config/: oms.json  tcp_share_config.json  tdgw.json  tgw.json
share-offer-src/test_file/generate_config_py/: gen_config_param.json  generate_all_config.py  generate_oms_json.py  generate_tcp_share_config.py  generate_tdgw_json.py  generate_tgw_json.py
share-offer-src/test_file/run/: run_multi_client_no_order.sh  run_multi_moc_client.sh  run_multi_moc_server.sh  run_single_moc_client.sh
(+62 files in other folders)
