[package]
name = "share-offer-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
tracing = "0.1"
fproto = { git = "http://10.102.41.100/rust/fproto.git", branch = "share_offer" }

[build-dependencies]
bindgen = "0.72.0"


[features]
default = []
local_debug = []